# office4ai

./: .bumpversion.toml  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: review-protocol.md  socketio-event.md
.claude/skills/: test-arch.md
.claude/skills/UAT/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/create-socketio-event/: SKILL.md
.claude/skills/debug-socketio-connection/: SKILL.md
.claude/skills/e2e-test-design/: SKILL.md
.claude/skills/fix-review/: SKILL.md
.claude/skills/test-checklist/: SKILL.md  reference.md
.claude/skills/update-socketio-event/: SKILL.md  reference.md
.github/workflows/: publish.yml  tests.yml
.windsurf/workflows/: arch.md
docs/: CONTRIBUTING.md  auto_cert_management_spec.md  ci_cd_test_architecture.md  desktop_resource_spec.md  ide4ai_alignment_plan.md  mcp_server_encapsulation_spec.md  mcp_tools_list.md  milestone_0_guide.md  mvp_implementation_plan.md  office4ai_dev_plan.md  socketio_event_development_standard.md  workspace_implementation_plan.md
docs/a2c/: a2c_rfc.md  computer.md  line_break_normalization_spec.md
docs/discussions/: word-get-styles-protocol-review.md
manual_tests/: MANUAL_TEST.md  __init__.py  e2e_base.py  ppt_e2e_base.py  ppt_test_helpers.py  test_helpers.py
manual_tests/comment_e2e/: test_comment_crud.py
manual_tests/export_content_e2e/: test_export_options.py
manual_tests/fixtures/: create_fixtures.py  create_ppt_fixtures.py
manual_tests/fixtures/comment_e2e/: simple.docx
manual_tests/fixtures/export_content_e2e/: complex.docx  large.docx  simple.docx
manual_tests/fixtures/get_document_stats_e2e/: complex.docx  empty.docx  large.docx  simple.docx
manual_tests/fixtures/get_document_structure_e2e/: complex.docx  empty.docx  large.docx  simple.docx
manual_tests/fixtures/get_selection_e2e/: complex.docx  empty.docx  large.docx  simple.docx
manual_tests/fixtures/get_styles_e2e/: complex.docx  empty.docx  large.docx  simple.docx
manual_tests/fixtures/get_visible_content_e2e/: complex.docx  empty.docx  large.docx  simple.docx
manual_tests/fixtures/insert_text_e2e/: complex.docx  large.docx  simple.docx
manual_tests/fixtures/ppt_e2e/: colored_slide.pptx  empty.pptx  multi_element.pptx  multi_slide.pptx  simple.pptx
manual_tests/fixtures/replace_selection_e2e/: complex.docx  empty.docx  large.docx  simple.docx
manual_tests/fixtures/replace_text_e2e/: complex.docx  empty.docx  format_targets.docx  large.docx  replace_targets.docx  simple.docx
manual_tests/fixtures/select_text_e2e/: edge_cases.docx  simple.docx
manual_tests/get_document_stats_e2e/: README.md  test_basic_stats.py
manual_tests/get_document_structure_e2e/: README.md  __init__.py  test_basic_structure.py
manual_tests/get_selection_e2e/: README.md  __init__.py  test_selection.py
manual_tests/get_styles_e2e/: README.md  test_styles.py
manual_tests/get_visible_content_e2e/: README.md  __init__.py  test_basic_get.py  test_edge_cases.py  test_options_get.py
manual_tests/insert_text_e2e/: README.md  test_basic_insert.py  test_format_insert.py  test_location_insert.py
manual_tests/ppt/: __init__.py  e2e_base.py  test_helpers.py
manual_tests/ppt/delete_element_e2e/: README.md  (+1 more)
manual_tests/ppt_delete_element_e2e/: README.md  test_delete.py
manual_tests/ppt_get_elements_e2e/: README.md  test_current_slide.py  test_specific_slide.py
manual_tests/ppt_get_screenshot_e2e/: README.md  test_screenshot.py
manual_tests/ppt_get_slide_info_e2e/: README.md  test_basic_info.py
manual_tests/ppt_get_slide_layouts_e2e/: README.md  test_layouts.py
manual_tests/ppt_insert_image_e2e/: README.md  test_image_insert.py
manual_tests/ppt_insert_shape_e2e/: README.md  test_shape_insert.py  test_shape_types.py
manual_tests/ppt_insert_table_e2e/: README.md  test_table_insert.py
manual_tests/ppt_insert_text_e2e/: README.md  test_basic_insert.py  test_insert_options.py
manual_tests/ppt_reorder_element_e2e/: README.md  test_reorder.py
manual_tests/ppt_slide_management_e2e/: README.md  test_add_slide.py  test_delete_slide.py  test_goto_slide.py  test_move_slide.py
manual_tests/ppt_update_element_e2e/: README.md  test_element_update.py
manual_tests/ppt_update_image_e2e/: README.md  test_image_update.py
manual_tests/ppt_update_table_e2e/: README.md  test_cell_update.py  test_row_column_update.py  test_table_format.py
manual_tests/ppt_update_text_box_e2e/: README.md  test_text_box_update.py
manual_tests/replace_selection_e2e/: README.md  __init__.py  test_edge_cases.py  test_format_replace.py  test_text_replace.py
manual_tests/replace_text_e2e/: README.md  test_basic_replace.py
manual_tests/select_text_e2e/: README.md  __init__.py  test_basic_select.py  test_edge_cases.py  test_helpers.py  test_search_options.py  test_selection_modes.py
manual_tests/word/: __init__.py  test_helpers.py  test_word_e2e.py
office4ai/: __init__.py  logging.py
office4ai/a2c_smcp/: __init__.py  config.py  server.py  subscriptions.py
office4ai/certs/: __init__.py  generator.py  paths.py  trust_store.py  validator.py
office4ai/dtos/: __init__.py
office4ai/environment/: __init__.py
office4ai/office/: __init__.py
office4ai/utils/: __init__.py
scripts/: start_mcp_server.py
tests/: __init__.py  conftest.py
tests/contract_tests/: __init__.py  conftest.py
tests/integration_tests/: MANUAL_TEST.md  conftest.py  test_word_e2e.py  test_workspace_quick.py  test_workspace_startup.py
tests/unit_tests/: __init__.py
(+224 files in other folders)
